@@ -10,6 +10,18 @@
 \newcommand{\s}{\ifelse{latex}{\eqn{_{#1}}}{\ifelse{html}{\out{<sub>#1</sub>}}{#1}}}
 \newcommand{\S}{\ifelse{latex}{\eqn{^{#1}}}{\ifelse{html}{\out{<sup>#1</sup>}}{^#1}}}
 
+\section{Changes in CHNOSZ version 1.4.2-1 (2022-02-11)}{
+
+  \itemize{
+
+    \item Skip some tests in \file{test-AD.R} (specifically, for heat capacity
+    and the second derivative of water density) on CRAN that fail on M1Mac and
+    ATLAS.
+
+  }
+
+}
+
 \section{Changes in CHNOSZ version 1.4.2 (2022-02-08)}{
 
   \subsection{PLANNED API CHANGE}{
